--- a/public/css/floradex.css
+++ b/public/css/floradex.css
@@ -29,7 +29,8 @@ a {
 }
 
 #plantcontainer {
-    margin-top:13%;
+    display: block;
+    margin-top:20%;
     margin-left:12%;
 
 }
@@ -38,4 +39,8 @@ a {
     width:15%;
     height:15%;
     margin-right:2%;
+}
+
+#coppy {
+    color:white;
 }
